--- a/test.html
+++ b/test.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>testing for my git</h1>
+    <h1>testing for my git2</h1>
+    <h1>testing for my git3</h1>
 </body>
 </html>
